--- a/app/views/follow_ups/index.html.erb
+++ b/app/views/follow_ups/index.html.erb
@@ -15,8 +15,10 @@
  
             <div id='calendar'> 
             </div>
-            <div id='cal_click_container'> 
+            <div class='cal_click_container'> 
             </div>
+            <span class="bClose" >
+            </span>
          
           
         </div>
