--- a/app/views/registrations/_course.html.erb
+++ b/app/views/registrations/_course.html.erb
@@ -59,7 +59,7 @@
      <br/>
      <div class="brg0"></div>
      <div id="programme_note_<%= i.id %>" >
-          <%= render 'programmes/note' %>
+          <%= render 'notes/note', sub: @programme %>
      </div>
      <br/>
      <br/>
