--- a/app/views/user_configs/_form.html.erb
+++ b/app/views/user_configs/_form.html.erb
@@ -131,7 +131,7 @@
   </div>
   <br/>
   <h3>
-  For Enquiry <span class="btnp" onclick="deselectAllCheck('#enq_cols');">deselect all </span>
+  For Enquiry <span class="toggler" onclick="deselectAllCheck('#enq_cols');">deselect all </span>
   </h3>
   <br/>
   <br/>
@@ -158,7 +158,7 @@
 
   
   <h3>
-  For Registration <span class="btnp" onclick="deselectAllCheck('#reg_cols');">deselect all </span>
+  For Registration <span class="toggler " onclick="deselectAllCheck('#reg_cols');">deselect all </span>
   </h3>
   <br/>
   <br/>
