--- a/app/views/enquiries/_listing.html.erb
+++ b/app/views/enquiries/_listing.html.erb
@@ -76,23 +76,30 @@
 
 </thead>
 
-
+<!----------------------- Tooltip ---------------------------->
 <%= image_tag "/images/icons/info.png",{class: "tooltip fr",
                                         title: "Use the dropdown to filter search. Use reset to clear the search box"} %>
-       <span class="fr btnp" style="margin-left:10px"  onclick="$('.dataTables_filter input').val('').keyup();">
+<!----------------------- Reset filter---------------------------->
+       <div class="srch_reset btnp fr" style="margin-left:10px;"  onclick="$('.dataTables_filter input').val('').keyup();">
        Reset
-       </span>&nbsp;
+       </div>&nbsp;
       
 <!----------------------- Search filter---------------------------->
        <%= select_tag :abdc,
-                      options_for_select(@cols.map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["Search",""])),
-                      {id: "mySelect",style: "width:150px",class: "fr"} %>
-                      
+                      options_for_select(@cols.map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["--Filter By--",""])),
+                      {id: "mySelect",style: "width:150px;margin-left:10px;height:24px;",class: "srch_sel fr"} %>
+
+
+
 <!----------------------- FollowUp filter ---------------------------->
        <%= select_tag :abdc,
-                      options_for_select([["FollowUp",""],["Today","todays"],["This Week","this_weeks"],["This Month","this_months"],["No FollowUp","no_followups"]]),
+                      options_for_select([["--All Time--",""],["Today","todays"],["This Week","this_weeks"],["This Month","this_months"],["No FollowUp","no_followups"]]),
                       {id: "followUpSelect",style: "width:150px",class: "fr"} %>
                       
+                      
+       <%= label_tag "follow_up_filter:",
+               nil,
+               {class: "fr",style: "margin-right:5px;margin-bottom:10px;"} %>
                       
                       <br/><br/>
        
@@ -113,6 +120,9 @@ dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>",'<%= @cols.size + 1 
 setColorsFromSession();
 activeMM("enquiriesMM");
 mytooltip();
+$('.dataTables_filter .srch_sel').remove();
+$('.srch_sel').prependTo('#<%= _id %>_filter');
+
 
 });
 </script>
