--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -703,8 +703,9 @@ line-height:1.6em;filter:alpha(opacity=100);-moz-opacity: 1;opacity: 1;box-shado
 .previewBox{border:1px solid #CBCCD1;background:#fff;padding:10px 15px 10px 15px;width:700px;margin-left:auto;margin-right:auto;
 overflow:auto;max-height:300px;}
 .otbox{background:#E8F0FD;padding:10px;}
-
 /* Hover preview - Ends */
+
+.info-msg{padding:7px 10px 5px 30px;border:1px solid #BCDFEF;background:#D1ECF7 ;font-size:12px;color:#444444;border-radius:5px;margin:5px 0 5px 0;color:#444;text-align:left;display:inline-block}
 
 
 
