--- a/app/views/email_templates/index.html.erb
+++ b/app/views/email_templates/index.html.erb
@@ -43,7 +43,7 @@
 <script>
 $(function(){
   setColorsFromSession();
-  $("ul.tab-menus li.email_template").trigger('click');
+  $("ul.tab-menus1 li.email_templates").trigger('click');
   activeMM("emailMM");
  });
 </script>
