--- a/app/views/follow_ups/index.html.erb
+++ b/app/views/follow_ups/index.html.erb
@@ -12,15 +12,22 @@
          </ul>
 <br/>
 <div>
-<small>Gut info her</small>
-</div>
-<br/>
-<div class="fr">
+<small>
+Choose a date(click) or a date range(click & drag) to create a follow up/todo
+</small>
+
+<div class="fr brg0">
 <ul class="theme-colrs-lg">
 <li><span class="blue-theme-todo"></span>&nbsp;Todos</li>
-<li><span class="blue-theme-followup"></span>&nbsp;Follow Up</li></ul></div>
-<div class="cl"></div>
+<li><span class="blue-theme-followup"></span>&nbsp;Follow Ups</li></ul></div>
 <br/>
+<br/>
+<div class="brg01"></div>
+<div class="cl"></div>
+</div>
+<br/>
+
+
  
             <div id='calendar'> 
             </div>
