--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,6 +1,6 @@
 
 <% sub.notes.each do |note| %>
-<% u = note._created_by %>
+<% u = note._cre_by %>
 <% if !u.nil? %>
            <br/>
            
