--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -1,43 +1,16 @@
-<!-- emails to enquiry -->
-<br/>
-<% if @list.to_i == 1 && obj.first.emails.size > 0 %>
-    <table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
-         <thead>
-          <tr>
-                                <th>Subject</th>
-                                <th>Date</th>
-                                <th>Sent By</th>
-                                <th>From</th>
-                                <th>View all</th>
-          </tr>
-        </thead>
-        <tbody>
-                <% obj.first.emails.includes(:smtp).each do |email| %>
-                    <tr>
-                        <td><%= email.subject %></td>
-                        <td><%= email.created_at.strftime("%F %R %p") %></td>
-                        <td><%= email._cre_by.name rescue "" %></td>
-                        <td><%= (email.from.nil? ? email.smtp.name : email.from) rescue "unknown" %></td>
-                        <td  class="preview" data-email_id='<%= email.id %>'>...</td>
-                   </tr>
-               <% end %>
-                    <tr>
-                        <td colspan="5" align="left"><a href="#">Back</a></td>
-                   </tr>
-
-        </tbody>
-      </table>
-    <br/><br/>
-<% end %>
-
-<div id="email-action" class="action-box">
-<div class="htab">
-        <h6><b>New Email</b></h6>
-</div>
-
-  <%= form_for(e) do |p| %>
-    <%= hidden_field_tag "#{p.object_name}[model]", obj_name %>
-    <%= hidden_field_tag "#{p.object_name}[#{obj_ids}][]", @subject_ids %>
+<!-- EmailTemplate -->
+<!-- Tabs---------------------------->
+<div class="tab-container">
+<%= render "email_templates/menus" %>
+<div class="tab-content" id="new_email" style="display:block">
+<div class="boxp box-theme-ch">
+   <h4 class="htab">
+    New Email
+   </h4>
+   <br/>
+   <br/>
+   <br/>
+  <%= form_for(@email) do |p| %>
     
     <div class="fbox">
          <%= p.label :email_template %>
@@ -51,12 +24,10 @@
                                 {:prompt => "--Template--"},
                                 {:class => "email_templates_select",
                                  :onchange => "sel_act(this);"}) %>
-                                 
-         <%= link_to "Create Email Template","/email_templates/new",{target: "_blank"} %>
-         <div id="email_template_create"> </div>      
+        
     </div>
     <div class="fbox">
-        <%= label_tag :send_from %></td>
+        <%= label_tag :send_from %>
         <%= p.collection_select(:smtp_id,
                                 Smtp.all,
                                 :id,
@@ -71,7 +42,7 @@
     </div>
     <br/>
     <div class="fbox">
-    <span onclick="$('.cc').slideToggle();">add cc</span> |
+        <span onclick="$('.cc').slideToggle();">add cc</span> |
         <span onclick="$('.bcc').slideToggle();">add bcc</span>
     </div>
     
@@ -79,14 +50,17 @@
         <%= p.label :cc %>
         <%= p.text_field :cc %>
     </div>
+    
     <div class="fbox bcc" style="display:none;">
         <%= p.label :bcc %>
         <%= p.text_field :bcc %>
     </div>
+    
     <div class="fbox">
         <%= p.label :subject %>
         <%= p.text_area :subject,{style: 'width:350px;height:20px;'} %>
     </div>
+    
     <div class="fbox" style="height:auto">
         <%= p.label :body %>
         <%= p.text_area(:body,{:class => "tinymce"}) %>
@@ -109,7 +83,10 @@
     </div>
   <% end %>
 
-    </div>
+</div>
+</div>
+</div>
+
 
 <script>
 
@@ -134,7 +111,9 @@ tinymce.init({
 
 $(function(){
     imagePreview("email");
-     setColorsFromSession();
+    setColorsFromSession();
+    $("ul.tab-menus1 li.new_email").trigger('click');
+    activeMM("emailMM");
 });
 
 </script>
