--- a/app/views/enquiries/_listing.html.erb
+++ b/app/views/enquiries/_listing.html.erb
@@ -80,13 +80,13 @@
 <%= image_tag "/images/icons/info.png",{class: "tooltip fr",
                                         title: "Use the dropdown to filter search. Use reset to clear the search box"} %>
 <!----------------------- Reset filter---------------------------->
-       <div class="srch_reset btnp fr" style="margin-left:10px;"  onclick="$('.dataTables_filter input').val('').keyup();">
+       <div class="srch_reset btnp fr" style="margin-left:10px;"  onclick="resetDataTable();">
        Reset
        </div>&nbsp;
       
 <!----------------------- Search filter---------------------------->
        <%= select_tag :abdc,
-                      options_for_select(@cols.map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["--Filter By--",""])),
+                      options_for_select((@cols - [:follow_up_date]).map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["--Filter By--",""])),
                       {id: "mySelect",style: "width:150px;margin-left:10px;height:24px;",class: "srch_sel fr"} %>
 
 
