--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@ $(function(){
 
   PrivatePub.subscribe("/notify/<%= current_user.id.to_s %>", function(data, channel) {
     info("Notification",data.message);
-     url = "/notify/<%= current_user.id.to_s %>"
+     url = "/notify/<%= current_user.id.to_s %>/" + data.id
      $.get(url,function(reply){
          $(reply).prependTo(".notifyls");
          var noticount = $('div#notify_count_container').data("count");
@@ -202,7 +202,7 @@ $(function(){
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="#" style="text-decoration:line-through">Contracts</a></li>
         <li id="emailMM">
-        <%= link_to  email_templates_path do %>
+        <%= link_to  emails_path do %>
           <img src="/images/icons/org_email.png"  id="iconMM6"width="36" /><br/>
           <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
           Emails
